--- a/lcl/languages/lclstrconsts.ca.po
+++ b/lcl/languages/lclstrconsts.ca.po
@@ -33,7 +33,7 @@ msgstr "No puc trobar un navegador HTML"
 
 #: lclstrconsts.hhshelpnohtmlbrowserfoundpleasedefineone
 #, object-pascal-format
-msgid "No HTML Browser found.%sPlease define one in Tools -> Options -> Help -> Help Options"
+msgid "No HTML Browser found.%sPlease define one in Tools -> Options -> Help -> Help Options."
 msgstr ""
 
 #: lclstrconsts.hhshelpthehelpdatabasewasunabletofindfile
@@ -557,7 +557,8 @@ msgstr "Ajuda"
 
 #: lclstrconsts.rshelpalreadyregistered
 #, object-pascal-format, fuzzy, badformat
-msgid "%s: Already registered"
+#| msgid "%s: Already registered"
+msgid "%s: already registered."
 msgstr "Ja enregistrat"
 
 #: lclstrconsts.rshelpcontextnotfound
@@ -590,13 +591,13 @@ msgstr "Context d'ajuda %s no trobat en la base de dades %s%s%s."
 #: lclstrconsts.rshelphelpdatabasedidnotfoundaviewerforahelppageoftype
 #, object-pascal-format, fuzzy, badformat
 #| msgid "Help Database \"%s\" did not found a viewer for a help page of type %s"
-msgid "Help Database \"%s\" did not find a viewer for a help page of type %s"
+msgid "Help Database \"%s\" did not find a viewer for a help page of type %s."
 msgstr "La base de dades de l'ajuda %s%s%s no ha trobat un visor per una pàgina d'ajuda del tipus %s"
 
 #: lclstrconsts.rshelphelpdatabasenotfound
 #, object-pascal-format, fuzzy, badformat
 #| msgid "Help Database %s%s%s not found"
-msgid "Help Database \"%s\" not found"
+msgid "Help Database \"%s\" not found."
 msgstr "Base de dades de l'ajuda %s%s%s no trobada"
 
 #: lclstrconsts.rshelphelpfordirectivenotfound
@@ -624,7 +625,7 @@ msgstr "Paraula clau d'ajuda %s%s%s no trobada en la base de dades %s%s%s."
 #: lclstrconsts.rshelphelpnodehasnohelpdatabase
 #, object-pascal-format, fuzzy, badformat
 #| msgid "Help node %s%s%s has no Help Database"
-msgid "Help node \"%s\" has no Help Database"
+msgid "Help node \"%s\" has no Help Database."
 msgstr "El node d'ajuda  %s%s%s no té base de dades d'ajuda"
 
 #: lclstrconsts.rshelpnohelpfoundforsource
@@ -635,7 +636,7 @@ msgstr "No s'ha trobat cap ajuda per a la línia %d, columna %d de %s."
 #: lclstrconsts.rshelpnohelpnodesavailable
 #, fuzzy
 #| msgid "No help nodes available"
-msgid "No help entries available for this topic"
+msgid "No help entries available for this topic."
 msgstr "No hi ha nodes d'ajuda disponibles"
 
 #: lclstrconsts.rshelpnotfound
@@ -646,7 +647,8 @@ msgstr "Ajuda no trobada"
 
 #: lclstrconsts.rshelpnotregistered
 #, object-pascal-format, fuzzy, badformat
-msgid "%s: Not registered"
+#| msgid "%s: Not registered"
+msgid "%s: not registered."
 msgstr "No enregistrat"
 
 #: lclstrconsts.rshelpselectorerror
@@ -656,7 +658,7 @@ msgstr "Error del selector d'ajuda"
 #: lclstrconsts.rshelpthereisnoviewerforhelptype
 #, object-pascal-format, fuzzy, badformat
 #| msgid "There is no viewer for help type %s%s%s"
-msgid "There is no viewer for help type \"%s\""
+msgid "There is no viewer for help type \"%s\"."
 msgstr "No hi ha cap visor per al tipus d'ajuda %s%s%s"
 
 #: lclstrconsts.rshelpviewererror
