--- a/lcl/languages/lclstrconsts.es.po
+++ b/lcl/languages/lclstrconsts.es.po
@@ -31,8 +31,9 @@ msgid "Unable to find a HTML browser."
 msgstr "No se pudo encontrar un visor HTML."
 
 #: lclstrconsts.hhshelpnohtmlbrowserfoundpleasedefineone
-#, object-pascal-format
-msgid "No HTML Browser found.%sPlease define one in Tools -> Options -> Help -> Help Options"
+#, object-pascal-format, fuzzy
+#| msgid "No HTML Browser found.%sPlease define one in Tools -> Options -> Help -> Help Options"
+msgid "No HTML Browser found.%sPlease define one in Tools -> Options -> Help -> Help Options."
 msgstr "No encontrado un Navegador HTML.%sPor favor definir uno en Herramientas -> Opciones -> Ayuda -> Opciones de ayuda"
 
 #: lclstrconsts.hhshelpthehelpdatabasewasunabletofindfile
@@ -542,8 +543,9 @@ msgid "Help"
 msgstr "Ayuda"
 
 #: lclstrconsts.rshelpalreadyregistered
-#, object-pascal-format
-msgid "%s: Already registered"
+#, object-pascal-format, fuzzy
+#| msgid "%s: Already registered"
+msgid "%s: already registered."
 msgstr "%s: Ya está registrado"
 
 #: lclstrconsts.rshelpcontextnotfound
@@ -569,13 +571,15 @@ msgid "Help context %s not found in Database \"%s\"."
 msgstr "Contexto de ayuda %s no encontrado en la base de datos \"%s\"."
 
 #: lclstrconsts.rshelphelpdatabasedidnotfoundaviewerforahelppageoftype
-#, object-pascal-format
-msgid "Help Database \"%s\" did not find a viewer for a help page of type %s"
+#, object-pascal-format, fuzzy
+#| msgid "Help Database \"%s\" did not find a viewer for a help page of type %s"
+msgid "Help Database \"%s\" did not find a viewer for a help page of type %s."
 msgstr "La base de datos de ayuda \"%s\" no encontró un visor para el tipo de página de ayuda %s"
 
 #: lclstrconsts.rshelphelpdatabasenotfound
-#, object-pascal-format
-msgid "Help Database \"%s\" not found"
+#, object-pascal-format, fuzzy
+#| msgid "Help Database \"%s\" not found"
+msgid "Help Database \"%s\" not found."
 msgstr "Base de datos de ayuda \"%s\" no encotrada"
 
 #: lclstrconsts.rshelphelpfordirectivenotfound
@@ -600,8 +604,9 @@ msgid "Help keyword \"%s\" not found in Database \"%s\"."
 msgstr "Clave de ayuda \"%s\" no encontrada en la Base de Datos \"%s\"."
 
 #: lclstrconsts.rshelphelpnodehasnohelpdatabase
-#, object-pascal-format
-msgid "Help node \"%s\" has no Help Database"
+#, object-pascal-format, fuzzy
+#| msgid "Help node \"%s\" has no Help Database"
+msgid "Help node \"%s\" has no Help Database."
 msgstr "El nodo de ayuda \"%s\" no tiene Base de Datos de ayuda"
 
 #: lclstrconsts.rshelpnohelpfoundforsource
@@ -610,7 +615,9 @@ msgid "No help found for line %d, column %d of %s."
 msgstr "No se ha encontrado ayuda para la línea %d, columna %d de %s."
 
 #: lclstrconsts.rshelpnohelpnodesavailable
-msgid "No help entries available for this topic"
+#, fuzzy
+#| msgid "No help entries available for this topic"
+msgid "No help entries available for this topic."
 msgstr "No hay nodos de ayuda disponibles"
 
 #: lclstrconsts.rshelpnotfound
@@ -618,8 +625,9 @@ msgid "No help found for this topic"
 msgstr "Ayuda no encontrada para éste tópico"
 
 #: lclstrconsts.rshelpnotregistered
-#, object-pascal-format
-msgid "%s: Not registered"
+#, object-pascal-format, fuzzy
+#| msgid "%s: Not registered"
+msgid "%s: not registered."
 msgstr "%s: No registrado"
 
 #: lclstrconsts.rshelpselectorerror
@@ -627,8 +635,9 @@ msgid "Help Selector Error"
 msgstr "Error del selector de ayuda"
 
 #: lclstrconsts.rshelpthereisnoviewerforhelptype
-#, object-pascal-format
-msgid "There is no viewer for help type \"%s\""
+#, object-pascal-format, fuzzy
+#| msgid "There is no viewer for help type \"%s\""
+msgid "There is no viewer for help type \"%s\"."
 msgstr "No hay visor de ayuda para el tipo de ayuda \"%s\""
 
 #: lclstrconsts.rshelpviewererror
