--- a/lcl/languages/lclstrconsts.fi.po
+++ b/lcl/languages/lclstrconsts.fi.po
@@ -29,8 +29,9 @@ msgid "Unable to find a HTML browser."
 msgstr "HTML selainta ei löydy."
 
 #: lclstrconsts.hhshelpnohtmlbrowserfoundpleasedefineone
-#, object-pascal-format
-msgid "No HTML Browser found.%sPlease define one in Tools -> Options -> Help -> Help Options"
+#, object-pascal-format, fuzzy
+#| msgid "No HTML Browser found.%sPlease define one in Tools -> Options -> Help -> Help Options"
+msgid "No HTML Browser found.%sPlease define one in Tools -> Options -> Help -> Help Options."
 msgstr "HTML selainta ei löydy.%sMäärittele se kohdassa Työkalut -> Asetukset -> Ohje -> Ohjeen asetukset"
 
 #: lclstrconsts.hhshelpthehelpdatabasewasunabletofindfile
@@ -542,8 +543,9 @@ msgid "Help"
 msgstr "Apu"
 
 #: lclstrconsts.rshelpalreadyregistered
-#, object-pascal-format
-msgid "%s: Already registered"
+#, object-pascal-format, fuzzy
+#| msgid "%s: Already registered"
+msgid "%s: already registered."
 msgstr "%s: Jo rekisteröity"
 
 #: lclstrconsts.rshelpcontextnotfound
@@ -569,13 +571,15 @@ msgid "Help context %s not found in Database \"%s\"."
 msgstr "Ohjeen viittausta %s ei löydy tietokannasta \"%s\"."
 
 #: lclstrconsts.rshelphelpdatabasedidnotfoundaviewerforahelppageoftype
-#, object-pascal-format
-msgid "Help Database \"%s\" did not find a viewer for a help page of type %s"
+#, object-pascal-format, fuzzy
+#| msgid "Help Database \"%s\" did not find a viewer for a help page of type %s"
+msgid "Help Database \"%s\" did not find a viewer for a help page of type %s."
 msgstr "Ohjetietokanta \"%s\" ei löytänyt katseluohjelmaa %s tyyppiselle ohjesivulle"
 
 #: lclstrconsts.rshelphelpdatabasenotfound
-#, object-pascal-format
-msgid "Help Database \"%s\" not found"
+#, object-pascal-format, fuzzy
+#| msgid "Help Database \"%s\" not found"
+msgid "Help Database \"%s\" not found."
 msgstr "Ohjetietokantaa \"%s\" ei löydy"
 
 #: lclstrconsts.rshelphelpfordirectivenotfound
@@ -599,8 +603,9 @@ msgid "Help keyword \"%s\" not found in Database \"%s\"."
 msgstr "Ohjeen avainsanaa \"%s\" ei löydy tietokannasta \"%s\"."
 
 #: lclstrconsts.rshelphelpnodehasnohelpdatabase
-#, object-pascal-format
-msgid "Help node \"%s\" has no Help Database"
+#, object-pascal-format, fuzzy
+#| msgid "Help node \"%s\" has no Help Database"
+msgid "Help node \"%s\" has no Help Database."
 msgstr "Ohjeen solmulla \"%s\" ei ole tietokantaa"
 
 #: lclstrconsts.rshelpnohelpfoundforsource
@@ -609,7 +614,9 @@ msgid "No help found for line %d, column %d of %s."
 msgstr "Riville %d, sarakkeelle %d %s:ssa ei löydy ohjetta."
 
 #: lclstrconsts.rshelpnohelpnodesavailable
-msgid "No help entries available for this topic"
+#, fuzzy
+#| msgid "No help entries available for this topic"
+msgid "No help entries available for this topic."
 msgstr "Tälle aiheelle ei ole ohjeita"
 
 #: lclstrconsts.rshelpnotfound
@@ -617,8 +624,9 @@ msgid "No help found for this topic"
 msgstr "Tälle aiheelle ei löydy ohjetta"
 
 #: lclstrconsts.rshelpnotregistered
-#, object-pascal-format
-msgid "%s: Not registered"
+#, object-pascal-format, fuzzy
+#| msgid "%s: Not registered"
+msgid "%s: not registered."
 msgstr "%s: Ei rekisteröity"
 
 #: lclstrconsts.rshelpselectorerror
@@ -626,8 +634,9 @@ msgid "Help Selector Error"
 msgstr "Ohjeen valitsijan virhe"
 
 #: lclstrconsts.rshelpthereisnoviewerforhelptype
-#, object-pascal-format
-msgid "There is no viewer for help type \"%s\""
+#, object-pascal-format, fuzzy
+#| msgid "There is no viewer for help type \"%s\""
+msgid "There is no viewer for help type \"%s\"."
 msgstr "Ohjeen tyypille \"%s\" ei ole katseluohjelmaa"
 
 #: lclstrconsts.rshelpviewererror
