--- a/lcl/languages/lclstrconsts.fr.po
+++ b/lcl/languages/lclstrconsts.fr.po
@@ -31,8 +31,9 @@ msgid "Unable to find a HTML browser."
 msgstr "Impossible de trouver un navigateur HTML."
 
 #: lclstrconsts.hhshelpnohtmlbrowserfoundpleasedefineone
-#, object-pascal-format
-msgid "No HTML Browser found.%sPlease define one in Tools -> Options -> Help -> Help Options"
+#, object-pascal-format, fuzzy
+#| msgid "No HTML Browser found.%sPlease define one in Tools -> Options -> Help -> Help Options"
+msgid "No HTML Browser found.%sPlease define one in Tools -> Options -> Help -> Help Options."
 msgstr "Aucun navigateur HTML n'a été trouvé.%sDéfinissez-en un dans Outils -> Options -> Aide -> Options de l'aide"
 
 #: lclstrconsts.hhshelpthehelpdatabasewasunabletofindfile
@@ -546,8 +547,9 @@ msgid "Help"
 msgstr "Aide"
 
 #: lclstrconsts.rshelpalreadyregistered
-#, object-pascal-format
-msgid "%s: Already registered"
+#, object-pascal-format, fuzzy
+#| msgid "%s: Already registered"
+msgid "%s: already registered."
 msgstr "%s : déjà enregistré"
 
 #: lclstrconsts.rshelpcontextnotfound
@@ -573,13 +575,15 @@ msgid "Help context %s not found in Database \"%s\"."
 msgstr "Contexte d'aide %s introuvable dans la base de données \"%s\"."
 
 #: lclstrconsts.rshelphelpdatabasedidnotfoundaviewerforahelppageoftype
-#, object-pascal-format
-msgid "Help Database \"%s\" did not find a viewer for a help page of type %s"
+#, object-pascal-format, fuzzy
+#| msgid "Help Database \"%s\" did not find a viewer for a help page of type %s"
+msgid "Help Database \"%s\" did not find a viewer for a help page of type %s."
 msgstr "La base de données d'aide \"%s\" n'a pas trouvé de visionneuse pour une page d'aide du type %s"
 
 #: lclstrconsts.rshelphelpdatabasenotfound
-#, object-pascal-format
-msgid "Help Database \"%s\" not found"
+#, object-pascal-format, fuzzy
+#| msgid "Help Database \"%s\" not found"
+msgid "Help Database \"%s\" not found."
 msgstr "Base de données d'aide \"%s\" introuvable"
 
 #: lclstrconsts.rshelphelpfordirectivenotfound
@@ -603,8 +607,9 @@ msgid "Help keyword \"%s\" not found in Database \"%s\"."
 msgstr "Mot-clé d'aide \"%s\" introuvable dans la base de données \"%s\"."
 
 #: lclstrconsts.rshelphelpnodehasnohelpdatabase
-#, object-pascal-format
-msgid "Help node \"%s\" has no Help Database"
+#, object-pascal-format, fuzzy
+#| msgid "Help node \"%s\" has no Help Database"
+msgid "Help node \"%s\" has no Help Database."
 msgstr "Le nœud d'aide \"%s\" n'a aucune base de données"
 
 #: lclstrconsts.rshelpnohelpfoundforsource
@@ -613,7 +618,9 @@ msgid "No help found for line %d, column %d of %s."
 msgstr "Aucune aide trouvée pour la ligne %d, colonne %d de %s."
 
 #: lclstrconsts.rshelpnohelpnodesavailable
-msgid "No help entries available for this topic"
+#, fuzzy
+#| msgid "No help entries available for this topic"
+msgid "No help entries available for this topic."
 msgstr "Aucune entrée d'aide disponible pour ce sujet"
 
 #: lclstrconsts.rshelpnotfound
@@ -621,8 +628,9 @@ msgid "No help found for this topic"
 msgstr "Aucune aide disponible pour ce sujet"
 
 #: lclstrconsts.rshelpnotregistered
-#, object-pascal-format
-msgid "%s: Not registered"
+#, object-pascal-format, fuzzy
+#| msgid "%s: Not registered"
+msgid "%s: not registered."
 msgstr "%s : non enregistré"
 
 #: lclstrconsts.rshelpselectorerror
@@ -630,8 +638,9 @@ msgid "Help Selector Error"
 msgstr "Erreur de sélecteur d'aide"
 
 #: lclstrconsts.rshelpthereisnoviewerforhelptype
-#, object-pascal-format
-msgid "There is no viewer for help type \"%s\""
+#, object-pascal-format, fuzzy
+#| msgid "There is no viewer for help type \"%s\""
+msgid "There is no viewer for help type \"%s\"."
 msgstr "Il n'y a aucune visionneuse pour ce type d'aide \"%s\""
 
 #: lclstrconsts.rshelpviewererror
