--- a/lcl/languages/lclstrconsts.it.po
+++ b/lcl/languages/lclstrconsts.it.po
@@ -33,8 +33,9 @@ msgid "Unable to find a HTML browser."
 msgstr "Impossibile trovare un browser HTML"
 
 #: lclstrconsts.hhshelpnohtmlbrowserfoundpleasedefineone
-#, object-pascal-format
-msgid "No HTML Browser found.%sPlease define one in Tools -> Options -> Help -> Help Options"
+#, object-pascal-format, fuzzy
+#| msgid "No HTML Browser found.%sPlease define one in Tools -> Options -> Help -> Help Options"
+msgid "No HTML Browser found.%sPlease define one in Tools -> Options -> Help -> Help Options."
 msgstr "Nessun Browser HTML trovato.%sDefinirne uno in Strumenti->Opzioni->Aiuto->Opzioni aiuto"
 
 #: lclstrconsts.hhshelpthehelpdatabasewasunabletofindfile
@@ -551,8 +552,9 @@ msgid "Help"
 msgstr "Aiuto"
 
 #: lclstrconsts.rshelpalreadyregistered
-#, object-pascal-format
-msgid "%s: Already registered"
+#, object-pascal-format, fuzzy
+#| msgid "%s: Already registered"
+msgid "%s: already registered."
 msgstr "%s: Già registrato"
 
 #: lclstrconsts.rshelpcontextnotfound
@@ -580,12 +582,13 @@ msgstr "Aiuto su %s non trovato nell'archivio \"%s\"."
 #: lclstrconsts.rshelphelpdatabasedidnotfoundaviewerforahelppageoftype
 #, object-pascal-format, fuzzy
 #| msgid "Help Database \"%s\" did not found a viewer for a help page of type %s"
-msgid "Help Database \"%s\" did not find a viewer for a help page of type %s"
+msgid "Help Database \"%s\" did not find a viewer for a help page of type %s."
 msgstr "L'archivio Help \"%s\" non trova un visualizzatore per le pagine di aiuto di tipo %s"
 
 #: lclstrconsts.rshelphelpdatabasenotfound
-#, object-pascal-format
-msgid "Help Database \"%s\" not found"
+#, object-pascal-format, fuzzy
+#| msgid "Help Database \"%s\" not found"
+msgid "Help Database \"%s\" not found."
 msgstr "Archivio Help \"%s\" non trovato"
 
 #: lclstrconsts.rshelphelpfordirectivenotfound
@@ -609,8 +612,9 @@ msgid "Help keyword \"%s\" not found in Database \"%s\"."
 msgstr "Aiuto sulla parola chiave \"%s\" non trovato nell'archivio \"%s\"."
 
 #: lclstrconsts.rshelphelpnodehasnohelpdatabase
-#, object-pascal-format
-msgid "Help node \"%s\" has no Help Database"
+#, object-pascal-format, fuzzy
+#| msgid "Help node \"%s\" has no Help Database"
+msgid "Help node \"%s\" has no Help Database."
 msgstr "Il nodo di aiuto \"%s\" non ha un Database di aiuto"
 
 #: lclstrconsts.rshelpnohelpfoundforsource
@@ -619,7 +623,9 @@ msgid "No help found for line %d, column %d of %s."
 msgstr "Nessun aiuto trovato per la linea %d, colonna %d di %s."
 
 #: lclstrconsts.rshelpnohelpnodesavailable
-msgid "No help entries available for this topic"
+#, fuzzy
+#| msgid "No help entries available for this topic"
+msgid "No help entries available for this topic."
 msgstr "Nessun aiuto disponibile"
 
 #: lclstrconsts.rshelpnotfound
@@ -627,8 +633,9 @@ msgid "No help found for this topic"
 msgstr "Aiuto non trovato"
 
 #: lclstrconsts.rshelpnotregistered
-#, object-pascal-format
-msgid "%s: Not registered"
+#, object-pascal-format, fuzzy
+#| msgid "%s: Not registered"
+msgid "%s: not registered."
 msgstr "%s: Non registrato"
 
 #: lclstrconsts.rshelpselectorerror
@@ -636,8 +643,9 @@ msgid "Help Selector Error"
 msgstr "Errore nella selezione dell'Help"
 
 #: lclstrconsts.rshelpthereisnoviewerforhelptype
-#, object-pascal-format
-msgid "There is no viewer for help type \"%s\""
+#, object-pascal-format, fuzzy
+#| msgid "There is no viewer for help type \"%s\""
+msgid "There is no viewer for help type \"%s\"."
 msgstr "Nessun visualizzatore per aiuto di tipo \"%s\""
 
 #: lclstrconsts.rshelpviewererror
