--- a/lcl/languages/lclstrconsts.nl.po
+++ b/lcl/languages/lclstrconsts.nl.po
@@ -35,8 +35,9 @@ msgid "Unable to find a HTML browser."
 msgstr "Geen HTML browser kunnen vinden."
 
 #: lclstrconsts.hhshelpnohtmlbrowserfoundpleasedefineone
-#, object-pascal-format
-msgid "No HTML Browser found.%sPlease define one in Tools -> Options -> Help -> Help Options"
+#, object-pascal-format, fuzzy
+#| msgid "No HTML Browser found.%sPlease define one in Tools -> Options -> Help -> Help Options"
+msgid "No HTML Browser found.%sPlease define one in Tools -> Options -> Help -> Help Options."
 msgstr "Geen HTML browser gevonden.%sDefinieer deze alstublieft via  Hulpmiddelen -> Opties -> Help -> Help Opties"
 
 #: lclstrconsts.hhshelpthehelpdatabasewasunabletofindfile
@@ -552,8 +553,9 @@ msgid "Help"
 msgstr "Help"
 
 #: lclstrconsts.rshelpalreadyregistered
-#, object-pascal-format
-msgid "%s: Already registered"
+#, object-pascal-format, fuzzy
+#| msgid "%s: Already registered"
+msgid "%s: already registered."
 msgstr "%s: Al vastgelegd"
 
 #: lclstrconsts.rshelpcontextnotfound
@@ -579,13 +581,15 @@ msgid "Help context %s not found in Database \"%s\"."
 msgstr "Help context %s niet gevonden in Database \"%s\"."
 
 #: lclstrconsts.rshelphelpdatabasedidnotfoundaviewerforahelppageoftype
-#, object-pascal-format
-msgid "Help Database \"%s\" did not find a viewer for a help page of type %s"
+#, object-pascal-format, fuzzy
+#| msgid "Help Database \"%s\" did not find a viewer for a help page of type %s"
+msgid "Help Database \"%s\" did not find a viewer for a help page of type %s."
 msgstr "Help Database \"%s\" heeft geen viewer gevonden voor help pagina van type %s"
 
 #: lclstrconsts.rshelphelpdatabasenotfound
-#, object-pascal-format
-msgid "Help Database \"%s\" not found"
+#, object-pascal-format, fuzzy
+#| msgid "Help Database \"%s\" not found"
+msgid "Help Database \"%s\" not found."
 msgstr "Help Database \"%s\" niet gevonden"
 
 #: lclstrconsts.rshelphelpfordirectivenotfound
@@ -609,8 +613,9 @@ msgid "Help keyword \"%s\" not found in Database \"%s\"."
 msgstr "Help sleutelwoord \"%s\" niet gevonden in Database \"%s\"."
 
 #: lclstrconsts.rshelphelpnodehasnohelpdatabase
-#, object-pascal-format
-msgid "Help node \"%s\" has no Help Database"
+#, object-pascal-format, fuzzy
+#| msgid "Help node \"%s\" has no Help Database"
+msgid "Help node \"%s\" has no Help Database."
 msgstr "Help node \"%s\" heeft geen Help Database"
 
 #: lclstrconsts.rshelpnohelpfoundforsource
@@ -619,7 +624,9 @@ msgid "No help found for line %d, column %d of %s."
 msgstr "Geen help gevonden voor regel %d, kolom %d van %s. "
 
 #: lclstrconsts.rshelpnohelpnodesavailable
-msgid "No help entries available for this topic"
+#, fuzzy
+#| msgid "No help entries available for this topic"
+msgid "No help entries available for this topic."
 msgstr "Geen help nodes beschikbaar voor dit onder"
 
 #: lclstrconsts.rshelpnotfound
@@ -627,8 +634,9 @@ msgid "No help found for this topic"
 msgstr "Help niet gevonden voor dit onderwerp"
 
 #: lclstrconsts.rshelpnotregistered
-#, object-pascal-format
-msgid "%s: Not registered"
+#, object-pascal-format, fuzzy
+#| msgid "%s: Not registered"
+msgid "%s: not registered."
 msgstr "%s: Niet vastgelegd"
 
 #: lclstrconsts.rshelpselectorerror
@@ -638,7 +646,7 @@ msgstr "Help Selectie fout"
 #: lclstrconsts.rshelpthereisnoviewerforhelptype
 #, object-pascal-format, fuzzy
 #| msgid "There is no viewer for help type %s%s%s"
-msgid "There is no viewer for help type \"%s\""
+msgid "There is no viewer for help type \"%s\"."
 msgstr "Er is geen viewer voor help type \"%s\""
 
 #: lclstrconsts.rshelpviewererror
