--- a/lcl/languages/lclstrconsts.pl.po
+++ b/lcl/languages/lclstrconsts.pl.po
@@ -32,8 +32,9 @@ msgid "Unable to find a HTML browser."
 msgstr "Nie można znaleźć przeglądarki HTML."
 
 #: lclstrconsts.hhshelpnohtmlbrowserfoundpleasedefineone
-#, object-pascal-format
-msgid "No HTML Browser found.%sPlease define one in Tools -> Options -> Help -> Help Options"
+#, object-pascal-format, fuzzy
+#| msgid "No HTML Browser found.%sPlease define one in Tools -> Options -> Help -> Help Options"
+msgid "No HTML Browser found.%sPlease define one in Tools -> Options -> Help -> Help Options."
 msgstr "Nie znaleziono przeglądarki HTML.%sUstaw ją w menu: Narzędzia -> Opcje -> Pomoc -> Opcje pomocy"
 
 #: lclstrconsts.hhshelpthehelpdatabasewasunabletofindfile
@@ -547,8 +548,9 @@ msgid "Help"
 msgstr "Pomoc"
 
 #: lclstrconsts.rshelpalreadyregistered
-#, object-pascal-format
-msgid "%s: Already registered"
+#, object-pascal-format, fuzzy
+#| msgid "%s: Already registered"
+msgid "%s: already registered."
 msgstr "%s: jest już zarejestrowany"
 
 #: lclstrconsts.rshelpcontextnotfound
@@ -574,13 +576,15 @@ msgid "Help context %s not found in Database \"%s\"."
 msgstr "Nie znaleziono kontekstu Pomocy %s w bazie danych \"%s\"."
 
 #: lclstrconsts.rshelphelpdatabasedidnotfoundaviewerforahelppageoftype
-#, object-pascal-format
-msgid "Help Database \"%s\" did not find a viewer for a help page of type %s"
+#, object-pascal-format, fuzzy
+#| msgid "Help Database \"%s\" did not find a viewer for a help page of type %s"
+msgid "Help Database \"%s\" did not find a viewer for a help page of type %s."
 msgstr "Baza danych Pomocy \"%s\" nie znalazła przeglądarki dla strony pomocy typu %s"
 
 #: lclstrconsts.rshelphelpdatabasenotfound
-#, object-pascal-format
-msgid "Help Database \"%s\" not found"
+#, object-pascal-format, fuzzy
+#| msgid "Help Database \"%s\" not found"
+msgid "Help Database \"%s\" not found."
 msgstr "Nie znaleziono bazy danych Pomocy \"%s\" "
 
 #: lclstrconsts.rshelphelpfordirectivenotfound
@@ -604,8 +608,9 @@ msgid "Help keyword \"%s\" not found in Database \"%s\"."
 msgstr "Nie znaleziono pomocy dla słowa kluczowego \"%s\" w bazie danych \"%s\"."
 
 #: lclstrconsts.rshelphelpnodehasnohelpdatabase
-#, object-pascal-format
-msgid "Help node \"%s\" has no Help Database"
+#, object-pascal-format, fuzzy
+#| msgid "Help node \"%s\" has no Help Database"
+msgid "Help node \"%s\" has no Help Database."
 msgstr "Węzeł pomocy \"%s\" nie ma bazy danych pomocy"
 
 #: lclstrconsts.rshelpnohelpfoundforsource
@@ -614,7 +619,9 @@ msgid "No help found for line %d, column %d of %s."
 msgstr "Nie znaleziono pomocy dla wiersza nr %d, i kolumny nr %d z %s."
 
 #: lclstrconsts.rshelpnohelpnodesavailable
-msgid "No help entries available for this topic"
+#, fuzzy
+#| msgid "No help entries available for this topic"
+msgid "No help entries available for this topic."
 msgstr "Brak dostępnych wpisów pomocy dla tego tematu"
 
 #: lclstrconsts.rshelpnotfound
@@ -622,8 +629,9 @@ msgid "No help found for this topic"
 msgstr "Nie znaleziono pomocy dla tego tematu"
 
 #: lclstrconsts.rshelpnotregistered
-#, object-pascal-format
-msgid "%s: Not registered"
+#, object-pascal-format, fuzzy
+#| msgid "%s: Not registered"
+msgid "%s: not registered."
 msgstr "%s: nie jest zarejestrowany"
 
 #: lclstrconsts.rshelpselectorerror
@@ -631,8 +639,9 @@ msgid "Help Selector Error"
 msgstr "Błąd selektora pomocy"
 
 #: lclstrconsts.rshelpthereisnoviewerforhelptype
-#, object-pascal-format
-msgid "There is no viewer for help type \"%s\""
+#, object-pascal-format, fuzzy
+#| msgid "There is no viewer for help type \"%s\""
+msgid "There is no viewer for help type \"%s\"."
 msgstr "Brak przeglądarki dla pomocy typu \"%s\""
 
 #: lclstrconsts.rshelpviewererror
