--- a/lcl/languages/lclstrconsts.uk.po
+++ b/lcl/languages/lclstrconsts.uk.po
@@ -34,8 +34,9 @@ msgid "Unable to find a HTML browser."
 msgstr "Не вдається знайти браузер HTML."
 
 #: lclstrconsts.hhshelpnohtmlbrowserfoundpleasedefineone
-#, object-pascal-format
-msgid "No HTML Browser found.%sPlease define one in Tools -> Options -> Help -> Help Options"
+#, object-pascal-format, fuzzy
+#| msgid "No HTML Browser found.%sPlease define one in Tools -> Options -> Help -> Help Options"
+msgid "No HTML Browser found.%sPlease define one in Tools -> Options -> Help -> Help Options."
 msgstr "Оглядач HTML не знайдено.%sЗадайте його в меню Засоби -> Параметри -> Довідка -> Параметри довідки"
 
 #: lclstrconsts.hhshelpthehelpdatabasewasunabletofindfile
@@ -543,8 +544,9 @@ msgid "Help"
 msgstr "Довідка"
 
 #: lclstrconsts.rshelpalreadyregistered
-#, object-pascal-format
-msgid "%s: Already registered"
+#, object-pascal-format, fuzzy
+#| msgid "%s: Already registered"
+msgid "%s: already registered."
 msgstr "%s: Вже зареєстрований"
 
 #: lclstrconsts.rshelpcontextnotfound
@@ -570,13 +572,15 @@ msgid "Help context %s not found in Database \"%s\"."
 msgstr "Контекст довідки %s не знайдено в базі \"%s\"."
 
 #: lclstrconsts.rshelphelpdatabasedidnotfoundaviewerforahelppageoftype
-#, object-pascal-format
-msgid "Help Database \"%s\" did not find a viewer for a help page of type %s"
+#, object-pascal-format, fuzzy
+#| msgid "Help Database \"%s\" did not find a viewer for a help page of type %s"
+msgid "Help Database \"%s\" did not find a viewer for a help page of type %s."
 msgstr "База даних довідки \"%s\" не знайшла програму перегляду для сторінки довідки типу %s"
 
 #: lclstrconsts.rshelphelpdatabasenotfound
-#, object-pascal-format
-msgid "Help Database \"%s\" not found"
+#, object-pascal-format, fuzzy
+#| msgid "Help Database \"%s\" not found"
+msgid "Help Database \"%s\" not found."
 msgstr "Базу даних довідки \"%s\" не знайдено"
 
 #: lclstrconsts.rshelphelpfordirectivenotfound
@@ -600,8 +604,9 @@ msgid "Help keyword \"%s\" not found in Database \"%s\"."
 msgstr "Ключове слово довідки \"%s\" не знайдено в базі даних \"%s\"."
 
 #: lclstrconsts.rshelphelpnodehasnohelpdatabase
-#, object-pascal-format
-msgid "Help node \"%s\" has no Help Database"
+#, object-pascal-format, fuzzy
+#| msgid "Help node \"%s\" has no Help Database"
+msgid "Help node \"%s\" has no Help Database."
 msgstr "Вузол довідки \"%s\" не має відповідної бази даних"
 
 #: lclstrconsts.rshelpnohelpfoundforsource
@@ -610,7 +615,9 @@ msgid "No help found for line %d, column %d of %s."
 msgstr "Не знайдено довідки для рядка %d, колонки %d з %s."
 
 #: lclstrconsts.rshelpnohelpnodesavailable
-msgid "No help entries available for this topic"
+#, fuzzy
+#| msgid "No help entries available for this topic"
+msgid "No help entries available for this topic."
 msgstr "Відсутні записи довідки на цю тему"
 
 #: lclstrconsts.rshelpnotfound
@@ -618,8 +625,9 @@ msgid "No help found for this topic"
 msgstr "Для цієї теми не знайдено довідки"
 
 #: lclstrconsts.rshelpnotregistered
-#, object-pascal-format
-msgid "%s: Not registered"
+#, object-pascal-format, fuzzy
+#| msgid "%s: Not registered"
+msgid "%s: not registered."
 msgstr "%s: Не зареєстрований"
 
 #: lclstrconsts.rshelpselectorerror
@@ -627,8 +635,9 @@ msgid "Help Selector Error"
 msgstr "Помилка відбірника довідки"
 
 #: lclstrconsts.rshelpthereisnoviewerforhelptype
-#, object-pascal-format
-msgid "There is no viewer for help type \"%s\""
+#, object-pascal-format, fuzzy
+#| msgid "There is no viewer for help type \"%s\""
+msgid "There is no viewer for help type \"%s\"."
 msgstr "Відсутня програма для перегляду типу довідки типу \"%s\""
 
 #: lclstrconsts.rshelpviewererror
