--- a/lcl/languages/lclstrconsts.zh_CN.po
+++ b/lcl/languages/lclstrconsts.zh_CN.po
@@ -32,8 +32,9 @@ msgid "Unable to find a HTML browser."
 msgstr "无法找到一个 HTML 浏览器。"
 
 #: lclstrconsts.hhshelpnohtmlbrowserfoundpleasedefineone
-#, object-pascal-format
-msgid "No HTML Browser found.%sPlease define one in Tools -> Options -> Help -> Help Options"
+#, object-pascal-format, fuzzy
+#| msgid "No HTML Browser found.%sPlease define one in Tools -> Options -> Help -> Help Options"
+msgid "No HTML Browser found.%sPlease define one in Tools -> Options -> Help -> Help Options."
 msgstr "无法找到 HTML 浏览器。%s请在工具 -> 选项 -> 帮助 -> 帮助选项中定义一个"
 
 #: lclstrconsts.hhshelpthehelpdatabasewasunabletofindfile
@@ -517,8 +518,9 @@ msgid "Help"
 msgstr "帮助"
 
 #: lclstrconsts.rshelpalreadyregistered
-#, object-pascal-format
-msgid "%s: Already registered"
+#, object-pascal-format, fuzzy
+#| msgid "%s: Already registered"
+msgid "%s: already registered."
 msgstr "%s:已经注册"
 
 #: lclstrconsts.rshelpcontextnotfound
@@ -544,13 +546,15 @@ msgid "Help context %s not found in Database \"%s\"."
 msgstr "帮助上下文 %s 在数据库 \"%s\" 中未找到。"
 
 #: lclstrconsts.rshelphelpdatabasedidnotfoundaviewerforahelppageoftype
-#, object-pascal-format
-msgid "Help Database \"%s\" did not find a viewer for a help page of type %s"
+#, object-pascal-format, fuzzy
+#| msgid "Help Database \"%s\" did not find a viewer for a help page of type %s"
+msgid "Help Database \"%s\" did not find a viewer for a help page of type %s."
 msgstr "帮助数据库 \"%s\" 没有找到类型为 %s 的帮助页面的查看器"
 
 #: lclstrconsts.rshelphelpdatabasenotfound
-#, object-pascal-format
-msgid "Help Database \"%s\" not found"
+#, object-pascal-format, fuzzy
+#| msgid "Help Database \"%s\" not found"
+msgid "Help Database \"%s\" not found."
 msgstr "未找到帮助数据库 \"%s\""
 
 #: lclstrconsts.rshelphelpfordirectivenotfound
@@ -574,8 +578,9 @@ msgid "Help keyword \"%s\" not found in Database \"%s\"."
 msgstr "帮助关键字\"%s\"未找到在数据库\"%s\"."
 
 #: lclstrconsts.rshelphelpnodehasnohelpdatabase
-#, object-pascal-format
-msgid "Help node \"%s\" has no Help Database"
+#, object-pascal-format, fuzzy
+#| msgid "Help node \"%s\" has no Help Database"
+msgid "Help node \"%s\" has no Help Database."
 msgstr "帮助节点 \"%s\" 没有帮助数据库"
 
 #: lclstrconsts.rshelpnohelpfoundforsource
@@ -584,7 +589,9 @@ msgid "No help found for line %d, column %d of %s."
 msgstr "未找到关于 %s 的第 %d 行第 %d 列的帮助。"
 
 #: lclstrconsts.rshelpnohelpnodesavailable
-msgid "No help entries available for this topic"
+#, fuzzy
+#| msgid "No help entries available for this topic"
+msgid "No help entries available for this topic."
 msgstr "没有可用的帮助条目此主题"
 
 #: lclstrconsts.rshelpnotfound
@@ -592,8 +599,9 @@ msgid "No help found for this topic"
 msgstr "没有帮助找到对于这个主题(topic)"
 
 #: lclstrconsts.rshelpnotregistered
-#, object-pascal-format
-msgid "%s: Not registered"
+#, object-pascal-format, fuzzy
+#| msgid "%s: Not registered"
+msgid "%s: not registered."
 msgstr "%s: 没有注册"
 
 #: lclstrconsts.rshelpselectorerror
@@ -601,8 +609,9 @@ msgid "Help Selector Error"
 msgstr "帮助选择器错误"
 
 #: lclstrconsts.rshelpthereisnoviewerforhelptype
-#, object-pascal-format
-msgid "There is no viewer for help type \"%s\""
+#, object-pascal-format, fuzzy
+#| msgid "There is no viewer for help type \"%s\""
+msgid "There is no viewer for help type \"%s\"."
 msgstr "没有用于帮助类型 \"%s\" 的查看器"
 
 #: lclstrconsts.rshelpviewererror
